fix example inner vertical scrollbar on linux

--- a/docs/style.css
+++ b/docs/style.css
@@ -180,8 +180,6 @@ html, body {
     align-items: stretch;
     margin: 0 auto;
     padding: 0.5em 0 0.5em 0;
-    overflow-y: scroll;
-    overflow-x: hidden;
     max-width: 900px;
 }
 @media screen and (max-width:950px) {
@@ -196,17 +194,17 @@ html, body {
 }
 
 .search-results-item {
-    flex-basis: calc(33% - (2 * 0.5em) - 3px);
+    flex-basis: calc(33% - (2 * 0.5em));
     overflow: hidden;
     margin: 0.5em;
     border-radius: 5px;
     background-color: var(--background-alt);
-    border: 1px solid var(--borders);
     box-shadow: 0 0 1px rgba(0,0,0,.06),0 2px 6px rgba(0,0,0,.03);
+    transition: box-shadow 0.3s ease;
 }
 @media screen and (max-width:950px) {
     .search-results-item {
-        flex-basis: calc(50% - (2 * 0.5em) - 3px);
+        flex-basis: calc(50% - (2 * 0.5em) - 2px);
     }
 }
 @media screen and (max-width:568px) {
@@ -214,6 +212,12 @@ html, body {
         flex-basis: 100%;
         margin: 0.5em 1em;
     }
+}
+.search-results-item:hover {
+    box-shadow: 0px 0px 1px rgba(0,0,0,.12),1px 2px 7px rgba(0,0,0,.08);
+}
+.search-results-item:hover img {
+    filter: brightness(110%);
 }
 
 .search-results-item > a {
@@ -229,9 +233,6 @@ html, body {
     object-fit: cover;
     filter: brightness(1);
     transition: filter 0.3s ease;
-}
-.search-results-item:hover img {
-    filter: brightness(110%);
 }
 
 .search-results-item section {
